removed weird file checks and simplify file loading so we don't error on spaces